# 7clock

./: .gitignore  display.c  display.h  ds1302.c  ds1302.h  main.c
firmware/: 7clock.mc3  CMakeLists.txt  build.sh  button.h  conf.h  display.c  display.h  ds1302.h  main.c  state_machine.c  state_machine.h
firmware/nbproject/: configurations.xml  project.xml
firmware/src/: ambient.c  ambient.h  device.h  display.c  display.h  main.c  rtc.c  rtc.h  state.c  state.h  system.c  system.h
firmware/src/peripherals/: twi.c  twi.h
hardware/: 7clock.kicad_pcb  7clock.kicad_pro  7clock.kicad_sch  fp-lib-table  sym-lib-table
hardware/Symbols/CR1220D-011/CR1220D-011.pretty/: CR1220D-011.kicad_mod
hardware/Symbols/SA10-21SURKWA/: DIP3040W75P254L2400H1050Q10N.kicad_mod  SA10-21SURKWA.dcm  SA10-21SURKWA.kicad_sym
hardware/gerber/: 7clock-CmtUser.gbr  7clock-CuBottom.gbl  7clock-CuTop.gtl  7clock-EdgeCuts.gm1  7clock-MaskBottom.gbs  7clock-MaskTop.gts  7clock-PasteBottom.gbp  7clock-PasteTop.gtp  7clock-SilkBottom.gbo  7clock-SilkTop.gto  7clock.drl  7clock.gbrjob  drill_report.rpt
nbproject/: configurations.xml
